samples/_failures_safe/1761285476_84a287_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66d5e263.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_66d5e263.c:158:5: error: expected expression at end of input
  158 |     for (
      |     ^~~
./samples/SAFE/__tmp_66d5e263.c:158:5: error: expected declaration or statement at end of input
